<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:src="@drawable/banana"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFoodName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:maxLines="2"
            android:text="@string/product_name"
            android:maxLength="20"
            android:ellipsize="end"
            android:textColor="@color/DarkBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/weigth"
            android:textColor="@color/holo_gray_light"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvFoodName"
            app:layout_constraintTop_toBottomOf="@+id/tvFoodName" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/Primary_green"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrVND"
            app:layout_constraintEnd_toStartOf="@+id/tvOrVND"
            app:layout_constraintTop_toTopOf="@+id/tvOrVND" />

        <TextView
            android:id="@+id/tvOrVND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@color/DimGray"
            android:textSize="16sp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnDetail"
            app:layout_constraintEnd_toStartOf="@+id/btnDetail"
            app:layout_constraintTop_toTopOf="@+id/btnDetail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDetail"
            android:layout_width="30dp"
            android:layout_marginTop="20dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>