<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/bg_item_card_cart"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/selectedCart"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCartProduct"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:src="@drawable/banana"
        app:layout_constraintStart_toEndOf="@id/selectedCart"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgCartProduct"
        app:layout_constraintStart_toEndOf="@+id/imgCartProduct"
        app:layout_constraintTop_toTopOf="@+id/imgCartProduct">

        <TextView
            android:id="@+id/tvNameCart"
            android:layout_width="200dp"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/product_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPriceCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDecreaseCart"
                android:backgroundTint="@color/holo_gray_light"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_minus" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/count"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnIncreaseCart"
                android:layout_width="40dp"
                android:backgroundTint="@color/Primary_green"
                android:layout_height="40dp"
                android:background="@drawable/round_plus" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRemoveCart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/delete"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/total"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
