<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MenuFragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:background="@drawable/profile_top_bg"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNotifications"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bell_ring"
            android:backgroundTint="@color/Primary_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/profile_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProfile"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <!--        <de.hdodenhof.circleimageview.CircleImageView-->
        <!--            android:id="@+id/profile_image"-->
        <!--            android:layout_width="96dp"-->
        <!--            android:layout_height="96dp"-->
        <!--            android:layout_marginTop="40dp"-->
        <!--            android:background="@drawable/profile_icon"-->
        <!--            app:civ_border_color="@color/holo_yellow_light"-->
        <!--            app:civ_border_width="2dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/tvProfile" />-->

        <!--        <com.airbnb.lottie.LottieAnimationView-->
        <!--            android:layout_width="96dp"-->
        <!--            android:layout_height="96dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/profile_image"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/profile_image"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/profile_image"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/profile_image"-->
        <!--            app:lottie_autoPlay="true"-->
        <!--            app:lottie_rawRes="@raw/profile" />-->

        <TextView
            android:id="@+id/tvNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/tvEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/holo_gray_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvNameUser"
            app:layout_constraintStart_toStartOf="@+id/tvNameUser"
            app:layout_constraintTop_toBottomOf="@+id/tvNameUser" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/proTabLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/proViewPager2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>